# cli-slang-dict

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  protocol.cpp  protocol.hpp
server/: CMakeLists.txt  main.cpp
